deployments/nginx-ingress/test/hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: aks-helloworld
              servicePort: 80
            path: /(.*)
          - backend:
              serviceName: ingress-demo
              servicePort: 80
            path: /hello-world-two(/|$)(.*)
