deployments/nginx-ingress/test/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-blue-green
  namespace: nginx-ingress
spec:
  rules:
    - host: nginx.gotk8s
      http:
        paths:
          - path: /blue
            backend:
              serviceName: nginx-deploy-blue
              servicePort: 8080
          - path: /green
            backend:
              serviceName: nginx-deploy-green
              servicePort: 8080
