deployments/nginx-ingress/test/nginx-deploy-green.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"labels":{"run":"nginx"},"name":"nginx-deploy-green","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"run":"nginx-green"}},"template":{"metadata":{"labels":{"run":"nginx-green"}},"spec":{"containers":[{"image":"nginx","name":"nginx","volumeMounts":[{"mountPath":"/usr/share/nginx/html","name":"webdata"}]}],"initContainers":[{"command":["/bin/sh","-c","echo \"\u003ch1\u003eI am \u003cfo [...]
  creationTimestamp: 2019-11-03T20:30:12Z
  generation: 1
  labels:
    run: nginx
  name: nginx-deploy-green
  namespace: nginx-ingress
  resourceVersion: "42202"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/nginx-deploy-green
  uid: bcbf75fc-fe78-11e9-bc0f-4ebd9f6700ef
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      run: nginx-green
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx-green
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: webdata
      dnsPolicy: ClusterFirst
      initContainers:
      - command:
        - /bin/sh
        - -c
        - echo "<h1>I am <font color=green>GREEN</font></h1>" > /webdata/index.html
        image: busybox
        imagePullPolicy: Always
        name: web-content
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /webdata
          name: webdata
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: webdata
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-11-03T20:30:12Z
    lastUpdateTime: 2019-11-03T20:30:12Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
